--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -21,6 +21,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_REGISTRY_LOGIN }}
           password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+      
+      - name: Login to Twir registry
+        uses: docker/login-action@v3
+        with:
+          registry: registry.twir.app
+          username: ${{ secrets.DOCKER_TWIR_LOGIN }}
+          password: ${{ secrets.DOCKER_TWIR_PASSWORD }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -31,6 +38,7 @@ jobs:
           platforms: linux/amd64
           tags: |
             twirapp/language-processor:latest
+            registry.twir.app/twirapp/language-processor:latest
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
